--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.3",
+    "@vercel/speed-insights": "^1.2.0",
     "antd": "^5.26.3",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
